[package]
name = "rs_mqtt_client_pub"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
winres = "0.1.12"

[dependencies]
console = "0.15.0"
dialoguer = "0.10.2"
figlet-rs = "0.1.4"
colored = "2.0.0"
paho-mqtt = "0.11.1"
chrono = "0.4.22"

